--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-python-dotenv==0.14.0
-requests==2.24.0
-urllib3==1.25.11
-validators==0.18.1
+requests~=2.24.0
+validators~=0.18.1
+python-dotenv~=0.14.0
